:pencil2: fix text align in justify

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,3 +26,7 @@ body{
   font-weight: 500;
   color: $white;
 }
+
+p{
+  text-align: justify;
+}
